--- a/app/views/answers/index.html.haml
+++ b/app/views/answers/index.html.haml
@@ -2,4 +2,12 @@
 %p= @question.body
 %br
 - @answers.each do |a|
-  = link_to "#{a.body}", question_answer_path(@question, a)
+  %div{class: "answer-#{a.id}"}
+    %h3 Ответ
+    - if user_signed_in? && (current_user == a.user)
+      = link_to 'Удалить ответ',
+        question_answer_path(@question, a), method: :delete
+      |
+      = link_to 'Редактировать ответ'
+    %p= a.body
+  %br
