--- a/app/views/answers/index.html.haml
+++ b/app/views/answers/index.html.haml
@@ -4,7 +4,7 @@
 - @answers.each do |a|
   %div{class: "answer-#{a.id}"}
     %h3 Ответ
-    - if user_signed_in? && (current_user == a.user)
+    - if user_signed_in? && (current_user.id == a.user_id)
       = link_to 'Удалить ответ',
         question_answer_path(@question, a), method: :delete
       |
