--- a/app/views/questions/index.html.haml
+++ b/app/views/questions/index.html.haml
@@ -6,6 +6,8 @@
       |
       = link_to 'Редактировать вопрос'
     %p= q.body
+    = link_to 'Посмотреть ответы',
+      question_path(q)
     = link_to 'Написать ответ',
       new_question_answer_path(q.id)
   %br
