Add realization for creating answer in questions#show

--- a/app/views/questions/index.html.haml
+++ b/app/views/questions/index.html.haml
@@ -1,6 +1,7 @@
 - @questions.each do |q|
   %div{class: "question-#{q.id}"}
     %h3= q.title
+    = link_to 'Открыть вопрос', question_path(q)
     -if user_signed_in? && (current_user.id == q.user_id)
       = link_to 'Удалить вопрос', q, method: :delete
       |
