--- a/app/views/questions/show.html.haml
+++ b/app/views/questions/show.html.haml
@@ -1,4 +1,5 @@
 %h1 Вопрос
+= link_to 'Cписок вопросов', questions_path
 
 %h3= "#{@question.title}"
 
@@ -15,5 +16,9 @@
     %p= a.body
   %br
 
-
-= link_to 'Cписок вопросов', questions_path
+= form_for [@question, @answer] do |f|
+  .field
+    = f.label :body, 'Новый ответ'
+    = f.text_area :body
+  .actions
+    = f.submit 'Отправить ответ'
