--- a/app/views/questions/_answers.html.haml
+++ b/app/views/questions/_answers.html.haml
@@ -1,10 +1,11 @@
-- @question.answers.each do |a|
-  %div{class: "answer-#{a.id}"}
-    %h3 Ответ
-    - if user_signed_in? && (current_user.id == a.user_id)
-      = link_to 'Удалить ответ',
-        question_answer_path(@question, a), method: :delete
-      |
-      = link_to 'Редактировать ответ'
-    %p= a.body
-  %br
+= @question.answers.each do |a|
+  - unless a.id.nil?
+    %div{class: "answer-#{a.id}"}
+      %h3 Ответ
+      - if user_signed_in? && (current_user.id == a.user_id)
+        = link_to 'Удалить ответ',
+          question_answer_path(@question, a), method: :delete
+        |
+        = link_to 'Редактировать ответ'
+      %p= a.body
+    %br
