Answer errors via Ajax

--- a/app/views/questions/_answers.html.haml
+++ b/app/views/questions/_answers.html.haml
@@ -1,4 +1,4 @@
-= @question.answers.each do |a|
+- @question.answers.each do |a|
   - unless a.id.nil?
     %div{class: "answer-#{a.id}"}
       %h3 Ответ
