--- a/app/views/answers/create.js.erb
+++ b/app/views/answers/create.js.erb
@@ -1,3 +1,9 @@
-$('.answers').append('<%= j render partial: "answer" %>');
-$('#answer_body').val('');
 $('#notice').html('<%= j flash[:notice] %>');
+<% if @answer.errors.present? %>
+  <% @answer.errors.full_messages.each do |message| %>
+    $('.answer-errors').html('<%= j message %>');
+  <% end %>
+<% else %>
+  $('.answers').append('<%= j render partial: "answer" %>');
+  $('#answer_body').val('');
+<% end %>
