--- a/app/assets/stylesheets/answers.scss
+++ b/app/assets/stylesheets/answers.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the answers controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.edit_answer {
+  display: none;
+}
+.answers > div {
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+  background: #eee;
+}
