Refactoring view questnion/show via partials

--- a/app/views/questions/show.html.haml
+++ b/app/views/questions/show.html.haml
@@ -1,9 +1,6 @@
-%h1 Вопрос
-= link_to 'Cписок вопросов', questions_path
-
-%h3= "#{@question.title}"
-
-%p= "#{@question.body}"
+.question
+  %h1= "Вопрос № #{@question.id}"
+  = render 'question'
 
 .answers
   = render 'answers'
