Edit question via Ajax

--- a/app/views/questions/_form.html.haml
+++ b/app/views/questions/_form.html.haml
@@ -6,4 +6,4 @@
     = f.label :body, 'Вопрос'
     = f.text_area :body
   .actions
-    = f.submit 'Сохранить'
+    = f.submit 'Сохранить', class: 'edit-question-button'
