Delete answer via Ajax. Add expectations for bad user in #destroy

--- a/app/views/questions/_answers.html.haml
+++ b/app/views/questions/_answers.html.haml
@@ -4,7 +4,7 @@
       %h3 Ответ
       - if user_signed_in? && (current_user.id == answer.user_id)
         = link_to 'Удалить ответ',
-          question_answer_path(@question, answer), method: :delete
+          question_answer_path(@question, answer), method: :delete, remote: true
         |
         = link_to 'Редактировать ответ', '', class: 'edit-answer-link', data: { answer_id: answer.id }
       .answer-errors
