--- a/app/views/answers/_answer.html.haml
+++ b/app/views/answers/_answer.html.haml
@@ -1,8 +1,12 @@
-%div{id: "answer-#{@answer.id}"}
+%div{id: "answer-#{answer.id}"}
   %h3 Ответ
-  - if user_signed_in? && (current_user.id == @answer.user_id)
-    = link_to 'Удалить ответ',
-      question_answer_path(@question, @answer), method: :delete
-    |
-    = link_to 'Редактировать ответ'
-  %p= @answer.body
+  = render 'answers/links', answer: answer  
+  .answer-errors
+  %p= answer.body
+
+  = form_for [@question, answer], remote: true, html: { id: "edit-answer-#{answer.id}" } do |f|
+    .field
+      = f.label :body, 'Ответ'
+      = f.text_area :body
+    .actions
+      = f.submit 'Сохранить', data: { answer_id: answer.id }
