Add answer scope order_by_best

--- a/app/views/questions/_answers.html.haml
+++ b/app/views/questions/_answers.html.haml
@@ -1,7 +1,3 @@
-- @question.answers.where(is_best: true).each do |answer|
-  - if answer.persisted?
-    = render 'answers/answer', answer: answer
-
-- @question.answers.where(is_best: false).each do |answer|
+- @question.answers.order_by_best.each do |answer|
   - if answer.persisted?
     = render 'answers/answer', answer: answer
