--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,9 +9,6 @@
   %body
     %p.notice#notice= notice
     %p.alert#alert= alert
-    - if user_signed_in?
-      = link_to 'Выйти',
-        destroy_user_session_path, method: :delete
-    - else
-      = link_to 'Войти', new_user_session_path
+    .header
+      = render 'common/links'
     = yield
