--- a/app/views/questions/show.html.haml
+++ b/app/views/questions/show.html.haml
@@ -1,14 +1,16 @@
-.question
-  %h1= "Вопрос № #{@question.id}"
-  = render 'question'
+.container
+  .question
+    %h1= "Вопрос № #{@question.id}"
+    = render 'question'
 
 .answers
   = render 'answers'
 
-= form_for [@question, @answer], remote: true do |f|
-  .field
-    = f.label :body, 'Новый ответ'
-    .answer-errors
-    = f.text_area :body
-  .actions
-    = f.submit 'Отправить ответ'
+.container
+  = form_for [@question, @answer], remote: true do |f|
+    .field
+      = f.label :body, 'Новый ответ'
+      .answer-errors
+      = f.text_area :body
+    .actions
+      = f.submit 'Отправить ответ'
