Add files to questions

--- a/app/views/questions/new.html.haml
+++ b/app/views/questions/new.html.haml
@@ -7,5 +7,9 @@
   .field
     = f.label :body, 'Вопрос'
     = f.text_area :body
+  .attachments
+    = f.fields_for  :attachments do |a|
+      = a.label :file, "Файл"
+      = a.file_field :file
   .actions
     = f.submit 'Спросить'
