--- a/app/views/questions/show.html.haml
+++ b/app/views/questions/show.html.haml
@@ -5,7 +5,8 @@
     %b{style: "text-decoration:underline"} Файлы:
     %ul
       - @question.attachments.each do |a|
-        %li= a.file.file.filename
+        %li= link_to a.file.identifier, a.file.url
+
 
 .answers
   = render 'answers'
