--- a/app/views/answers/_answer.html.haml
+++ b/app/views/answers/_answer.html.haml
@@ -6,6 +6,10 @@
   .answer-errors
 
   %p= answer.body
+  %b{style: "text-decoration:underline"} Файлы:
+  %ul
+    - answer.attachments.each do |a|
+      %li= link_to a.file.identifier, a.file.url
 
   = form_for [@question, answer], remote: true, html: { id: "edit-answer-#{answer.id}" } do |f|
     .field
