--- a/app/views/questions/show.html.haml
+++ b/app/views/questions/show.html.haml
@@ -2,10 +2,13 @@
   .question
     %h1= "Вопрос № #{@question.id}"
     = render 'question'
-    %b{style: "text-decoration:underline"} Файлы:
-    %ul
-      - @question.attachments.each do |a|
-        %li= link_to a.file.identifier, a.file.url
+
+    .attachments
+      - if @question.attachments.any?
+        %b= "Файлы:"
+        %ul
+          - @question.attachments.each do |a|
+            %li= link_to a.file.identifier, a.file.url
 
 
 .answers
@@ -17,9 +20,15 @@
       = f.label :body, 'Новый ответ'
       .answer-errors
       = f.text_area :body
+
     .attachments
+      %b= "Можете добавить файлы:"
       = f.fields_for :attachments do |a|
-        = a.label :file, "Файл:"
-        = a.file_field :file
+        = link_to_add_association 'Добавить ещё один файл', f, :attachments,
+          'data-association-insertion-nod' => '.attachments',
+          'data-association-insertion-method' =>  'append',
+          partial: 'common/attachment_fields'
+        %br
+
     .actions
       = f.submit 'Отправить ответ'
