--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,3 +21,6 @@ input[type=submit] { @extend .btn; @extend .btn-primary }
 .header {
   @extend .container;
 }
+.attachments .field input {
+  display: inline-block;
+}
