--- a/app/views/answers/_answer.html.haml
+++ b/app/views/answers/_answer.html.haml
@@ -6,14 +6,18 @@
   .answer-errors
 
   %p= answer.body
-  %b{style: "text-decoration:underline"} Файлы:
-  %ul
-    - answer.attachments.each do |a|
-      %li= link_to a.file.identifier, a.file.url
+
+  .attachments
+    - if answer.attachments.any?
+      %b= "Файлы:" 
+      %ul
+        - answer.attachments.each do |a|
+          %li= link_to a.file.identifier, a.file.url
 
   = form_for [@question, answer], remote: true, html: { id: "edit-answer-#{answer.id}" } do |f|
     .field
       = f.label :body, 'Ответ'
       = f.text_area :body
+
     .actions
       = f.submit 'Сохранить', data: { answer_id: answer.id }
