--- a/app/views/answers/_answer.html.haml
+++ b/app/views/answers/_answer.html.haml
@@ -1,18 +1,12 @@
 %div.col-md-6{id: "answer-#{answer.id}"}
   %h3= answer.is_best ? "Лучший ответ" : "Ответ"
 
-  = render 'answers/links', answer: answer  
+  = render 'answers/links', answer: answer
 
   .answer-errors
 
-  %p= answer.body
-
-  .attachments
-    - if answer.attachments.any?
-      %b= "Файлы:" 
-      %ul
-        - answer.attachments.each do |a|
-          %li= link_to a.file.identifier, a.file.url
+  .content
+    = render 'answers/content', answer: answer
 
   = form_for [@question, answer], remote: true, html: { id: "edit-answer-#{answer.id}" } do |f|
     .field
