--- a/app/views/questions/_content.html.haml
+++ b/app/views/questions/_content.html.haml
@@ -1,5 +1,7 @@
 %h3= "#{@question.title}"
 %p= "#{@question.body}"
+.vote
+
 .attachments
   - if @question.attachments.any?
     %b= "Файлы:"
@@ -7,6 +9,7 @@
       - @question.attachments.each do |attachment|
         %tr
           %td= link_to attachment.file.identifier, attachment.file.url
-          %td= link_to 'Удалить', question_path(@question.id,
-            question: { attachments_attributes: { id: attachment.id,
-            "_destroy" => true } }), remote: true, method: :patch
+          - if user_signed_in? && (current_user.id == @question.user_id)
+            %td= link_to 'Удалить', question_path(@question.id,
+              question: { attachments_attributes: { id: attachment.id,
+              "_destroy" => true } }), remote: true, method: :patch
