--- a/app/views/answers/create.js.erb
+++ b/app/views/answers/create.js.erb
@@ -6,5 +6,8 @@ $('#notice').html('<%= j flash[:notice] %>');
 <% else %>
   $('.answer-errors').empty();
   $('textarea#answer_body').val('');
-  $('.answers').append('<%= j render "answer", answer: @answer %>');
+  <% publish_to "/questions/#{@question.id}/answer" do %>
+    $('.answers').append('<%= j render "answer", answer: @answer %>');
+  <% end %>
+
 <% end %>
