Add new answers over js

--- a/app/views/answers/_answer.html.haml
+++ b/app/views/answers/_answer.html.haml
@@ -10,15 +10,9 @@
 
   = render 'answers/vote', answer: answer
 
-  = form_for [@question, answer], remote: true, html: { id: "edit-answer-#{answer.id}" } do |f|
-    .field
-      = f.label :body, 'Ответ'
-      = f.text_area :body
-
-    .actions
-      = f.submit 'Сохранить', data: { answer_id: answer.id }
+  = render 'answers/form', answer: answer
 
   = render 'common/comments', commentable: answer
-  = render 'answers/comment_form', answer: answer
 
-  = subscribe_to "/answer/#{answer.id}/comment"
+  - if !current_user.nil?
+    = render 'answers/comment_form', answer: answer
