--- a/app/views/questions/_comment_form.html.haml
+++ b/app/views/questions/_comment_form.html.haml
@@ -1,11 +1,11 @@
-- if user_signed_in?
-  .add-comment-link
-    = link_to 'Добавить комментарий', '#'
-.new_comment
-  = form_for @question, url: { action: "add_comment" }, method: "patch", remote: true do |f|
-    = f.fields_for :comments_attributes do |c|
-      .field
-        = c.label :body, 'Комментарий'
-        %br
-        = c.text_area :body
-    = f.submit 'Добавить', class: 'add-comment-button'
+.add-comment-link
+  = link_to 'Добавить комментарий', '#'
+
+.comment-errors
+
+= form_for [@question, @question.comments.build], remote: true do |f|
+  .field
+    = f.label :body, 'Комментарий'
+    %br
+    = f.text_area :body
+  = f.submit 'Добавить', class: 'add-comment-button'
