--- a/app/views/answers/_form.html.haml
+++ b/app/views/answers/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for [@question, answer], remote: true, html: { id: "edit-answer-#{answer.id}" } do |f|
+= form_for answer, remote: true, html: { id: "edit-answer-#{answer.id}" } do |f|
   .field
     = f.label :body, 'Ответ'
     = f.text_area :body
