--- a/app/views/answers/index.html.haml
+++ b/app/views/answers/index.html.haml
@@ -1,13 +1,13 @@
 %h3= @question.title
 %p= @question.body
 %br
-- @answers.each do |a|
-  %div{class: "answer-#{a.id}"}
+- @answers.each do |answer|
+  %div{class: "answer-#{answer.id}"}
     %h3 Ответ
-    - if user_signed_in? && (current_user.id == a.user_id)
+    - if user_signed_in? && (current_user.id == answer.user_id)
       = link_to 'Удалить ответ',
-        question_answer_path(@question, a), method: :delete
+        answer_path(@question, answer), method: :delete
       |
       = link_to 'Редактировать ответ'
-    %p= a.body
+    %p= answer.body
   %br
