--- a/app/views/questions/index.html.haml
+++ b/app/views/questions/index.html.haml
@@ -2,17 +2,17 @@
   = link_to "Новый вопрос", new_question_path
 
 .questions
-  - @questions.each do |q|
-    %div{class: "question-#{q.id}"}
-      %h3= q.title
-      = link_to 'Открыть вопрос', question_path(q)
-      -if user_signed_in? && (current_user.id == q.user_id)
-        = link_to 'Удалить вопрос', q, method: :delete
+  - @questions.each do |question|
+    %div{class: "question-#{question.id}"}
+      %h3= question.title
+      = link_to 'Открыть вопрос', question
+      -if user_signed_in? && (current_user.id == question.user_id)
+        = link_to 'Удалить вопрос', question, method: :delete
         |
         = link_to 'Редактировать вопрос'
-      %p= q.body
+      %p= question.body
       = link_to 'Написать ответ',
-        new_question_answer_path(q.id)
+        new_question_answer_path(question)
     %br
 
 = subscribe_to '/questions'
