--- a/app/views/questions/_form.html.haml
+++ b/app/views/questions/_form.html.haml
@@ -6,7 +6,7 @@
     = f.label :body, 'Вопрос'
     = f.text_area :body
   .attachments
-    = f.fields_for :attachments do |a|
+    = f.fields_for :attachments, @question.attachments.build do |a|
       = a.label :file, class: "hidden"
       = a.text_field :file
       = a.check_box :_destroy
