--- a/app/views/questions/show.html.haml
+++ b/app/views/questions/show.html.haml
@@ -19,7 +19,7 @@
     .attachments
       %b= "Можете добавить файлы:"
 
-      = f.fields_for :attachments do |a|
+      = f.fields_for :attachments, @answer.attachments.build do |a|
         = link_to_add_association 'Добавить ещё один файл', f, :attachments,
           'data-association-insertion-nod' => '.attachments',
           'data-association-insertion-method' =>  'append',
