--- a/app/views/answers/_answer.html.haml
+++ b/app/views/answers/_answer.html.haml
@@ -10,7 +10,7 @@
 
   = render 'answers/vote', answer: answer
 
-  = render 'answers/form', answer: answer
+  = render 'answers/form_edit', answer: answer
 
   = render 'common/comments', commentable: answer
 
