--- a/app/views/answers/_form_edit.html.haml
+++ b/app/views/answers/_form_edit.html.haml
@@ -2,5 +2,7 @@
   .field
     = f.label :body, 'Ответ'
     = f.text_area :body
+    = render 'attachments/fields_for', f: f,
+      attachments: answer.attachments.first || answer.attachments.build
   .actions
     = f.submit 'Сохранить', data: { answer_id: answer.id }
