--- a/app/views/questions/new.html.haml
+++ b/app/views/questions/new.html.haml
@@ -1,20 +1,6 @@
-%h1 Задайте вопрос
+%h1= t('.ask_question_title')
 
-= form_for @question do |f|
-  .field
-    = f.label :title, 'Заголовок'
-    = f.text_field :title  
-  .field
-    = f.label :body, 'Вопрос'
-    = f.text_area :body
-
-  .attachments
-    = f.fields_for  :attachments, @question.attachments.build do |a|
-      = link_to_add_association 'Добавить ещё один файл', f, :attachments,
-        'data-association-insertion-nod' => '.attachments',
-        'data-association-insertion-method' =>  'append',
-        partial: 'common/attachment_fields'
-      %br
-
-  .actions
-    = f.submit 'Спросить'
+.new_question
+  = render 'form', remote: false,
+    button_class: 'new-question-button',
+    attachments: @question.attachments.build
