--- a/app/views/answers/_content.html.haml
+++ b/app/views/answers/_content.html.haml
@@ -7,7 +7,7 @@
       %tr
         - answer.attachments.each do |attachment|
           %td= link_to attachment.file.identifier, attachment.file.url
-          - if user_signed_in? && (current_user.id == answer.user_id)
+          - if can? :update, answer
             %td= link_to 'Удалить', answer_path(answer,
               answer: { attachments_attributes: { id: attachment.id,
               "_destroy" => true, } }), remote: true, method: :patch 
