--- a/app/views/questions/index.html.haml
+++ b/app/views/questions/index.html.haml
@@ -5,11 +5,10 @@
       %h3= question.title
       %p= question.body
       = link_to t('.show_question'), question
-      -if user_signed_in? && (current_user.id == question.user_id)
-        = link_to t('.delete_question'), question, method: :delete
-        = link_to t('.edit_question')
+      = link_to t('.delete_question'), question, method: :delete if can? :destroy, question
+      = link_to t('.edit_question') if can? :update, question
       = link_to t('.new_answer'),
-        new_question_answer_path(question) if user_signed_in?
+        new_question_answer_path(question) if can? :create, Answer
     %br
 
 = subscribe_to '/questions'
