--- a/app/views/common/_links.html.haml
+++ b/app/views/common/_links.html.haml
@@ -6,5 +6,5 @@
   %span.glyphicon.glyphicon-log-in
   = link_to t('.sign_in'), new_user_session_path
 
-= link_to t('.new_question'), new_question_path if user_signed_in?
+= link_to t('.new_question'), new_question_path if can? :create, Question
 = link_to t('.questions_link'), questions_path
