--- a/app/views/questions/_content.html.haml
+++ b/app/views/questions/_content.html.haml
@@ -9,7 +9,7 @@
       - @question.attachments.each do |attachment|
         %tr
           %td= link_to attachment.file.identifier, attachment.file.url
-          - if user_signed_in? && (current_user.id == @question.user_id)
+          - if can? :update, @question
             %td= link_to 'Удалить', question_path(@question,
               question: { attachments_attributes: { id: attachment.id,
               "_destroy" => true } }), remote: true, method: :patch
