--- a/app/views/questions/show.html.haml
+++ b/app/views/questions/show.html.haml
@@ -3,13 +3,12 @@
   = render 'question'
   = render 'common/comments', commentable: @question
 
-  - unless current_user.nil?
-    = render 'questions/comment_form'
+  = render 'questions/comment_form' if can? :create, Comment
 
 .answers{data: { question_id: @question.id } } 
   = render 'answers'
 
-= render 'answers/form_new' if user_signed_in?
+= render 'answers/form_new' if can? :create, Answer
 
 = subscribe_to "/questions/#{@question.id}/answer"
 = subscribe_to "/questions/#{@question.id}/comment"
